kyy-k8s-config/src/app/backend/go-qr/go-qr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-qr
  name: go-qr
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: go-qr
    spec:
      containers:
        - name: go-qr
          image: registry.cn-qingdao.aliyuncs.com/kaoyaya/qr:go
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
