kyy-k8s-config/src/app/backend/go-qr/go-qr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-qr
  name: go-qr
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: go-qr
