kyy-k8s-config/src/app/backend/go-qr/go-qr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: go-qr
  name: go-qr
spec:
  rules:
    - host: "qr.kaoyaya.com"
      http:
        paths:
          - backend:
              serviceName: go-qr
              servicePort: 80
